@@ -1,6 +1,7 @@
 v1.4.9 (WIP)
 - Add InputField.GetCursorPosition and InputField.SetCursorPosition
 - Add Table.Sort, Table.SetSortFunc and Table.SetSortClicked
+- Add TextView.SetReindexBuffer
 - Upgrade tcell to v2: includes strikethrough support
 
 v1.4.8 (2020-08-11)
